[package]
name = "narchive"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
lofty = "0.21"
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
chrono = "0.4"

